# dotfiles

./: .aliases  .bash_profile  .exports  .gitconfig  .gitignore  CLAUDE.md  README.md  main.sh  setup-claude.sh
.claude/: CLAUDE.md  README.md  plan.md  settings.json
.claude/consolidate-output/: blockers.md  broad-sweep-methodology.md  commit_msg.txt  compounded-learnings.md  decisions.md  deep-dive-methodology.md  lows.md  progress.md  report.md  review.md  spec.md
.claude/guidelines/: automation-patterns.md  communication.md  component-architecture.md  context-aware-learnings.md  lazy-load-test.md  multi-agent-orchestration.md  path-resolution.md  skill-invocation.md  skill-path-resolution.md  troubleshooting.md  validation.md  web-session-pr-creation.md
.claude/learnings/: CLAUDE.md  accessibility-patterns.md  api-design.md  aws-messaging.md  aws-patterns.md  bash-patterns.md  bignumber-financial-arithmetic.md  browser-security.md  ci-cd-gotchas.md  ci-cd.md  claude-authoring-claude-md.md  claude-code-hooks.md  (+67 more)
claude/: CLAUDE.md  README.md  learnings-providers.json  settings.json  statusline-command.sh
claude/hooks/learnings-suggest/: .gitignore  Cargo.toml  README.md  analyze.py  bootstrap.sh  learnings-suggest.sh  read-log.sh  rebuild-index.sh
claude/hooks/learnings-suggest/src/: lib.rs  main.rs
iTerm2/: com.googlecode.iterm2.plist
scripts/: export-batch.sh  import-batch.sh  sync-claude-skills.sh
vim_related/: .vimrc  bundles.vimrc  defaults.vimrc
vscode_related/: README.md  javascript.json  settings.json  typescript.json  typescriptreact.json
(+696 files in other folders)
